Fix footer spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ html, body {
   width: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
+  background-color: $background-color;
 }
 
 body {
@@ -243,5 +244,13 @@ footer {
     padding-left: 0;
     width: 100%;
     max-height: none;
+  }
+
+  footer {
+    padding: 0 20px 0 20px;
+    
+    .last-updated {
+      font-size: 12px;
+    }
   }
 }
